--- a/src/AlgorithmExplorer.Console/config.json
+++ b/src/AlgorithmExplorer.Console/config.json
@@ -6,6 +6,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -14,6 +20,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -22,6 +34,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -30,6 +48,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -38,6 +62,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -46,6 +76,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -54,6 +90,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -62,6 +104,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -73,6 +121,12 @@
           },
           {
             "displayName": "Number"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -84,6 +138,12 @@
           },
           {
             "displayName": "Number"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -95,6 +155,12 @@
           },
           {
             "displayName": "Number"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -106,6 +172,12 @@
           },
           {
             "displayName": "Number"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -114,6 +186,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -122,6 +200,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -130,6 +214,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       },
@@ -138,6 +228,12 @@
         "displayableCoordinatorOptions": [
           {
             "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
           }
         ]
       }
