Add SubsetSum algorithm

--- a/src/AlgorithmExplorer.Console/config.json
+++ b/src/AlgorithmExplorer.Console/config.json
@@ -236,6 +236,20 @@
             "displayName": "StepType"
           }
         ]
+      },
+      {
+        "algorithmName": "subsetSum",
+        "displayableCoordinatorOptions": [
+          {
+            "displayName": "Iterations"
+          },
+          {
+            "displayName": "Step"
+          },
+          {
+            "displayName": "StepType"
+          }
+        ]
       }
     ]
   }
